feat: add database for storage app

--- a/Zad4/appsettings.json
+++ b/Zad4/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Zad4Context": "Server=(localdb)\\mssqllocaldb;Database=Zad4Context-280bce72-0f01-414a-a279-55984d93b058;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
